Added OWASP report document and fixed some sonarqube code smells